add additional check to notebook

--- a/subsegment.ipynb
+++ b/subsegment.ipynb
@@ -94,6 +94,8 @@
     "bvalsPath = data_dir / 'bvals'\n",
     "bvalsPath_b9 = data_dir / 'bvals_b9'\n",
     "bvecsPath = data_dir / 'bvecs'\n",
+    "ParcellationFsPath = data_dir / 'mri/aparc+aseg.mgz'\n",
+    "\n",
     "\n",
     "# Freesurfer lookup table, e.g. https://surfer.nmr.mgh.harvard.edu/fswiki/FsTutorial/AnatomicalROI/FreeSurferColorLUT\n",
     "lutPath = data_dir / 'FreesurferLookup.csv'\n",
@@ -101,7 +103,8 @@
     "#tckPath=Path('/home/naxos2-raid25/sreta001/DBS_for_sreta001/DBS-OCD/OCD004/Code/app-track_aLIC_harelpreproc/output/track.tck')\n",
     "saveFigDir = startDir / 'output'\n",
     "\n",
-    "to_check = [ parcellationPath, refT1Path, lutPath, diff_b0acpc_path, diff_unreg_path]\n",
+    "to_check = [ parcellationPath, refT1Path, lutPath, diff_b0acpc_path, \n",
+    "            diff_unreg_path, ParcellationFsPath, bvalsPath, bvalsPath_b9, bvecsPath]\n",
     "for i in to_check:\n",
     "    print(i)\n",
     "    if not i.is_file():\n",
