calculate within-alic centroid, split rACC

--- a/subsegment.ipynb
+++ b/subsegment.ipynb
@@ -56,6 +56,7 @@
     "from warnings import warn\n",
     "from pathlib import Path\n",
     "import nibabel as nib\n",
+    "from scipy import ndimage\n",
     "#import random\n",
     "\n",
     "#make sure that wma_pyTools is right in the working directory, or that\n",
@@ -79,6 +80,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9c50ee3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extract and organize inputs\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f0780a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# coregister B0 image into acpc space\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5a313813",
    "metadata": {},
    "outputs": [],
@@ -95,6 +117,11 @@
     "bvalsPath_b9 = data_dir / 'bvals_b9'\n",
     "bvecsPath = data_dir / 'bvecs'\n",
     "ParcellationFsPath = data_dir / 'mri/aparc+aseg.mgz'\n",
+    "rACC_mod_aparc_aseg = data_dir / 'rACC_mod_aparc_aseg.nii.gz'\n",
+    "rACC_split_labels = {11026: data_dir / 'lh_rostralanteriorcingulate_ROI_acpc_1.nii.gz',\n",
+    "                     21026: data_dir / 'lh_rostralanteriorcingulate_ROI_acpc_2.nii.gz',\n",
+    "                    12026: data_dir / 'rh_rostralanteriorcingulate_ROI_acpc_1.nii.gz',\n",
+    "                     22026: data_dir / 'rh_rostralanteriorcingulate_ROI_acpc_2.nii.gz'}\n",
     "\n",
     "\n",
     "# Freesurfer lookup table, e.g. https://surfer.nmr.mgh.harvard.edu/fswiki/FsTutorial/AnatomicalROI/FreeSurferColorLUT\n",
@@ -198,23 +225,41 @@
    "outputs": [],
    "source": [
     "%%script bash\n",
+    "# fails if ran on jupyter notebook, run in terminal instead\n",
     "# run \"main\" app-track_aLIC script\n",
     "export APPTAINER_BIND=\"/home,${APPTAINER_BIND}\"\n",
     "\n",
-    "cd \"${startDir}/app-track_aLIC\"\n",
+    "cd \"${startDir}/app-track_aLIC\" #navigate to startDir, then run ./main\n",
     "./main"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bb5c37f",
+   "metadata": {},
+   "source": [
+    "## Modify aparc+aseg with divided rACC ROI"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fc97a34",
+   "id": "4936e158",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%script bash\n",
-    "cd app-track_aLIC\n",
-    "singularity exec -e docker://brainlife/dipy:1.4.1 app-track-between-multiple-regions/mergeTcks.py"
+    "#load aparc+aseg in acpc\n",
+    "aparc_aseg = nib.load(parcellationPath)\n",
+    "aparc_aseg_voxel_grid = aparc_aseg.get_fdata()\n",
+    "\n",
+    "#load rACC masks and voxel grid\n",
+    "for key, value in rACC_split_labels.items():\n",
+    "    rACC_ROI = nib.load(value)\n",
+    "    rACC_ROI_voxel_grid = rACC_ROI.get_fdata() #values either 0 and 1 because it's a mask\n",
+    "    aparc_aseg_voxel_grid[rACC_ROI_voxel_grid>0.5] = key #selecting aparc_aseg voxels within rACC mask and output corresponding key\n",
+    "\n",
+    "aparc_aseg_nifti = nib.Nifti1Image(aparc_aseg_voxel_grid,aparc_aseg.affine) #convert to nifti image\n",
+    "nib.save(aparc_aseg_nifti,filename=rACC_mod_aparc_aseg)"
    ]
   },
   {
@@ -232,8 +277,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "targetLabels={'left':[1002,1026,1012,1020,1028,1003,1014,1019,1027],\n",
-    "              'right':[2002,2026,2012,2020,2028,2003,2014,2019,2027]}\n",
+    "targetLabels={'left':[1002,11026,21026,1012,1020,1028,1003,1014,1019,1027],\n",
+    "              'right':[2002,12026,22026,2012,2020,2028,2003,2014,2019,2027]}\n",
     "spineLabels = {'left': [28, 16, 10], \n",
     "               'right': [16, 60, 49]}\n",
     "\n",
@@ -340,8 +385,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load atlas-baced segmentation (Dan calls it a parcellation)\n",
-    "parcellaton=nib.load(parcellationPath)"
+    "# load atlas-based segmentation - modified rACC mask (Dan calls it a parcellation)\n",
+    "parcellaton=nib.load(rACC_mod_aparc_aseg)"
    ]
   },
   {
@@ -376,7 +421,7 @@
    "outputs": [],
    "source": [
     "#perform inflate & deIsland of input parcellation\n",
-    "inflated_atlas_file = saveFigDir / Path(Path(parcellationPath.stem).stem + '_inflated').with_suffix('.nii.gz')\n",
+    "inflated_atlas_file = saveFigDir / Path(Path(rACC_mod_aparc_aseg.stem).stem + '_inflated').with_suffix('.nii.gz')\n",
     "print(inflated_atlas_file)\n",
     "inflatedAtlas,deIslandReport,inflationReport= wmaPyTools.roiTools.preProcParc(parcellaton,deIslandBool=True,inflateIter=2,retainOrigBorders=False,maintainIslandsLabels=None,erodeLabels=[2,41])    \n",
     "nib.save(inflatedAtlas,filename=inflated_atlas_file)"
@@ -434,7 +479,70 @@
    "id": "c505057b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Calculate centroid for each pathway\n",
+    "APaxis = 1\n",
+    "\n",
+    "for iSide in ['left', 'right']: #iterate over each hemisphere\n",
+    "    for track_file in track_files[iSide]: \n",
+    "        for iTarget in targetLabels[iSide]: #iterate over each pathway\n",
+    "            targetStr = lookupTable.loc[iTarget, 'LabelName:'] #label corresponding to each pathway\n",
+    "            in_file = saveFigDir / ('%s_%04d_%s' % (track_file.stem, iTarget, targetStr)) #generate input file\n",
+    "            in_nifti = nib.load(in_file.with_suffix('.nii.gz')) #load nifti of a pathway\n",
+    "            in_img = in_nifti.get_fdata() #convert nifti into a voxel array\n",
+    "            num_slices = np.shape(in_img)[APaxis]\n",
+    "            out_file = saveFigDir / ('%s_%04d_%s_centerofmass' % (track_file.stem, iTarget, targetStr)) #output center of mass image\n",
+    "            centerofmass = np.zeros([num_slices,3]) #numerical array corresponding to x,y,z coordinates of centroid\n",
+    "            for iSlice in range(num_slices): #interating over total number of coronal slides of input image\n",
+    "                img_slice = in_img[:,iSlice,:] #an individual slice\n",
+    "                tmp = ndimage.center_of_mass(img_slice, labels=None, index=None) #step that calculates COM for each slice\n",
+    "                centerofmass[iSlice,:] = [tmp[0],iSlice,tmp[1]] #adding iSlice at APaxis=1\n",
+    "            centerofmass = centerofmass[~np.any(np.isnan(centerofmass),axis=1)]\n",
+    "            nib.affines.apply_affine(in_nifti.affine, centerofmass, inplace=True)\n",
+    "            np.savetxt(out_file.with_suffix('.csv'), centerofmass, delimiter=\",\") #save output file as a .csv for all slices\n",
+    "            \n",
+    "                \n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92a68920",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate (within ALIC) centroid for each pathway using ALIC mask\n",
+    "#lh_ALIC_mask = fullCutIC_ROI11_left.nii.gz\n",
+    "#rh_ALIC_mask = fullCutIC_ROI11_right.nii.gz\n",
+    "\n",
+    "ALIC_mask_dir = {'left': data_dir / 'fullCutIC_ROI11_left.nii.gz',\n",
+    "                'right': data_dir/ 'fullCutIC_ROI11_right.nii.gz'}\n",
+    "\n",
+    "APaxis = 1\n",
+    "\n",
+    "for iSide in ['left', 'right']: #iterate over each hemisphere\n",
+    "    ALIC_mask = nib.load(ALIC_mask_dir[iSide])#loading ALIC mask\n",
+    "    for track_file in track_files[iSide]: \n",
+    "        for iTarget in targetLabels[iSide]: #iterate over each pathway\n",
+    "            targetStr = lookupTable.loc[iTarget, 'LabelName:'] #label corresponding to each pathway\n",
+    "            in_file = saveFigDir / ('%s_%04d_%s' % (track_file.stem, iTarget, targetStr)) #generate input file\n",
+    "            in_nifti = nib.load(in_file.with_suffix('.nii.gz')) #load nifti of a pathway\n",
+    "            in_img = in_nifti.get_fdata() #convert nifti into a voxel array\n",
+    "            resample_ALIC_mask = dipy.align.resample(ALIC_mask,in_nifti) #resample ALIC mask nifti into heatmap nifti dimensions\n",
+    "            in_img = in_img*resample_ALIC_mask.get_fdata() #multiply ALIC density map voxel array by resampled ALIC mask array\n",
+    "            num_slices = np.shape(in_img)[APaxis]\n",
+    "            out_file = saveFigDir / ('%s_%04d_%s_centerofmass_withinALIC' % (track_file.stem, iTarget, targetStr)) #output center of mass image\n",
+    "            centerofmass = np.zeros([num_slices,3]) #numerical array corresponding to x,y,z coordinates of centroid\n",
+    "            for iSlice in range(num_slices): #interating over total number of coronal slides of input image\n",
+    "                img_slice = in_img[:,iSlice,:] #an individual slice\n",
+    "                tmp = ndimage.center_of_mass(img_slice, labels=None, index=None) #step that calculates COM for each slice\n",
+    "                centerofmass[iSlice,:] = [tmp[0],iSlice,tmp[1]] #adding iSlice at APaxis=1\n",
+    "            centerofmass = centerofmass[~np.any(np.isnan(centerofmass),axis=1)]\n",
+    "            nib.affines.apply_affine(in_nifti.affine, centerofmass, inplace=True)\n",
+    "            np.savetxt(out_file.with_suffix('.csv'), centerofmass, delimiter=\",\") #save output file as a .csv for all slices\n",
+    "            "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -642,7 +750,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -656,7 +764,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
